// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSidebarNav .vue renders correctly 1`] = `
<nav
  class="c-sidebar-nav"
>
  <div
    class="c-scroll-area c-position-relative ps"
  >
    <ul
      class="c-nav"
    />
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </div>
</nav>
`;

exports[`CSidebarNav .vue renders correctly in sidebar 1`] = `
<div
  class="c-sidebar-lg-show c-sidebar c-sidebar-dark"
>
  <nav
    class="c-sidebar-nav"
  >
    <div
      class="c-scroll-area c-position-relative ps"
    >
      <ul
        class="c-nav"
      />
      <div
        class="ps__rail-x"
        style="left: 0px; top: 0px;"
      >
        <div
          class="ps__thumb-x"
          style="left: 0px; width: 0px;"
          tabindex="0"
        />
      </div>
      <div
        class="ps__rail-y"
        style="top: 0px; left: 0px;"
      >
        <div
          class="ps__thumb-y"
          style="top: 0px; height: 0px;"
          tabindex="0"
        />
      </div>
    </div>
  </nav>
</div>
`;
